<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <EditText
        android:id="@+id/addEditCommentBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/add_edit_comment_hint"/>
    <Button
        android:id="@+id/addEditCommentOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/addEditCommentBody"
        android:text="@string/add_edit_comment_ok"/>
    <Button
        android:id="@+id/addEditCommentCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/addEditCommentOK"
        android:text="@string/add_edit_comment_cancel"/>

</RelativeLayout>