<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">
    <me.grantland.widget.AutofitTextView
        android:id="@+id/barcode_scan_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:maxLines="1"
        android:text="@string/barcode_scan_instruction"
        android:textSize="500sp"/>

    <Button
        android:id="@+id/barcode_reader_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/barcode_reader_back"/>
    <Switch
        android:id="@+id/turnon_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/barcode_reader_back_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:checked="false"
        android:text="@string/turnon_flash"
        android:textSize="20dp"/>
    <com.wmcalyj.eashtracking.barcodereader.camera.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/turnon_flash"
        android:layout_below="@id/barcode_scan_instruction"
        android:layout_centerHorizontal="true">

        <com.wmcalyj.eashtracking.barcodereader.camera.GraphicOverlay
            android:id="@+id/graphicOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"/>

    </com.wmcalyj.eashtracking.barcodereader.camera.CameraSourcePreview>


</RelativeLayout>
